<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prestamos Mutualidades</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cobros">Cobros</string>
    <string name="title_activity_pagos">Pagos</string>
    <string name="Buscar">Buscar</string>
    <string name="BuscarSocio">Folio Socio : </string>
    <string name="RegistrarCobro">Regitrar Cobro </string>
    <string name="RegistrarPago">Regitrar Pago </string>
    <string name="Cobranza"> Cobranza del dia</string>
    <string name="Pagos"> Pagos del dia</string>
    <string name="pendientes_cobros">Pendientes del dia (Cobranza)</string>
    <string name="pendientes_pagos">Pendientes del dia (Pagos)</string>
    <string name="fecha_actual"> Fecha del dia</string>
    <string name="actualizar">Actualizar</string>
    <string name="cargar_datos">Cargar datos al servidor</string>
    <string name="ip">IP Servidor</string>
    <string name="total_cobranza">Total cobranza : </string>
    <string name="total_pagos">Total Pagos : </string>
    <string name="folio_socio">Folio socio: </string>
    <string name="nombre_socio">Nombre: </string>
    <string name="folio_mutualista">Folio mutualista: </string>
    <string name="numero_bloc"># Bloc: </string>
    <string name="monto">Monto: $</string>
    <string name="atraso">Atraso: </string>
    <string name="recargo">Recargo: </string>
    <string name="numero_sorteo"># Sorteo: </string>
    <string name="fecha_pago_socio"> Fecha de pago al socio: </string>
    <string name="telefono">Teléfono:</string>
    <string name="direccion">Direccion: </string>
    <string name="title_activity_pagos_mes">Pagos del mes</string>
    <string name="button_pagos_mes">Pagos del mes</string>
    <string name="adelanto">Adelanto</string>
    <string name="aplicar_recargo">Aplicar atrasos y recargos</string>

</resources>
