<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="5">
	
	   <TextView
	       android:layout_width="match_parent"
	       android:layout_height="wrap_content"
	       android:text="@string/fecha_actual"
	       android:textSize="18sp" >

	    </TextView>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:weightSum="3" >

        <TextView
            android:id="@+id/tViewBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/BuscarSocio"            
            android:textSize="18sp"
            android:layout_weight="1"
        >
        </TextView>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/searchMenber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Buscar"
            android:layout_weight="1"
            >

            </Button>

    </LinearLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2" >
        	
        <ListView
            android:id="@+id/lViewMember"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </ListView>
        
      <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="13"
            >

          
            
            <TextView
                android:id="@+id/folio_socio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/folio_socio" />

            <TextView
                android:id="@+id/nombre_socio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_socio" />

            <TextView
                android:id="@+id/folio_mutualista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/folio_mutualista" />
            <TextView
                android:id="@+id/numero_bloc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numero_bloc" />
            <TextView
                android:id="@+id/monto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monto" />
            <TextView
                android:id="@+id/atraso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/atraso" />
            <TextView
                android:id="@+id/recargo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recargo" />
            <TextView
                android:id="@+id/numero_sorteo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numero_sorteo" />
            <TextView
                android:id="@+id/fecha_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_pago_socio" />
            <TextView
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/telefono" />
            
            <TextView
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/direccion" />

            <Button
                android:id="@+id/btn_registrar_cobro_cobros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegistrarCobro" />

        </LinearLayout>
    	</LinearLayout>
    

</LinearLayout>
