<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fecha_dia_pagos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/fecha_actual"
        android:textSize="30sp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:weightSum="3" >

        <TextView
            android:id="@+id/tViewBuscar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BuscarSocio"
            android:textSize="18sp" >
        </TextView>

        <EditText
            android:id="@+id/buscarSocioPago"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/searchMenber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="searchMember"
            android:text="@string/Buscar" >
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="2" >

        <ListView
            android:id="@+id/list_view_pay_member"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
        </ListView>

       <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="9" >

            <TextView
                android:id="@+id/folio_socio_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/folio_socio"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nombre_socio_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nombre_socio"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/folio_mutualista_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/folio_mutualista"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/monto_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/monto"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/atraso_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/atraso"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/numero_sorteo_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/numero_sorteo"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fecha_pago"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fecha_pago_socio"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_registrar_cobro_pagos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/RegistrarPago" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>